2001-11-13  Akim Demaille  <akim@epita.fr>

	* tests/aclocal.m4 (AC_STATE_SAVE): s/LIBOBJS/LIB@&t@OBJS/ to cope
	with stricter rules on LIBOBJS.

2001-11-12  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/c.m4 (AC_C_PROTOTYPES): Define __PROTOTYPES too.
	* doc/autoconf.texi (C Compiler): AC_C_PROTOTYPES now defines
	__PROTOTYPES too.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_GETMNTENT): Use AC_CHECK_FUNCS.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/c.m4, lib/autoconf/fortran.m4,
	* lib/autoconf/functions.m4, lib/autoconf/general.m4,
	* lib/autoconf/headers.m4, lib/autoconf/libs.m4,
	* lib/autoconf/programs.m4, lib/autoconf/specific.m4,
	* lib/autoconf/types.m4: When invoking AC_DEFINE and friends,
	specify to what the macro should be defined (typically to 1).

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_STRTOD): AC_SUBST POW_LIB.
	From Jim Meyering.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/programs.m4 (_AC_PROG_LEX_YYTEXT_DECL): Use
	AC_TRY_EVAL to run $LEX, not AC_TRY_COMMAND.  This validates the
	definition used by Automake where LEX is +/- "${missing} lex" and
	`missing' itself contains variables.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Push KILL at the end.
	Now that M4sh pushes BODY, the comments were output at the end of
	the test suites.

2001-11-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (&autoreconf): Run aclocal before tracing, so
	that we can trace macros from aclocal.m4.
	Trace AC_PROG_LIBTOOL, not AM_PROG_LIBTOOL, since the latter is
	obsoleted, and redirect to the former anyway.
	Reported by Ralf Corsepius.

2001-11-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (&autoreconf): AC_CONFIG_SUBIDRS are to be
	processed only if present.
	* tests/torture.at (Configuring subdirectories): Use autoreconf
	instead of successive calls to autoconf.