@@ -106,6 +106,7 @@ Martyn Johnson              Martyn.Johnson@cl.cam.ac.uk
 Matthew D. Langston         langston@SLAC.Stanford.EDU
 Michael Elizabeth Chastain  chastain@cygnus.com
 Michael Schoene             mrs@mlc.de
+Michael Matz                matz@kde.org
 Mike Hopkirk                hops@sco.com
 Mike Stump                  mrs@wrs.com
 Miles Bader                 miles@gnu.ai.mit.edu
